<resources>
    <string name="app_name">FelixKe@ALC4</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_alc4_0">Welcome to ALC4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="todo">TODO</string>
    <string name="felix_savali_nzioki">Felix Savali Nzioki</string>
    <string name="track">track</string>
    <string name="track_android">Track: Android</string>
    <string name="country_kenya">Country: Kenya</string>
    <string name="email_felixnzioki99_gmail_com">Email: felixnzioki99@gmail.com</string>
    <string name="phone_number_254792567464">Phone Number: 254792567464</string>
    <string name="slack_username_felix_nzioki_savali">Slack Username: @Felix Nzioki Savali</string>
    <string name="email_felixnzioki99_gmaill_com">Email: felixnzioki99@gmaill.com</string>
</resources>
